@@ -40,6 +40,22 @@
 
   </section> <!-- sec-issues -->
 
+  <section id="sec-issue-ids">
+   <title>Issue IDs</title>
+
+   <para>Each issue is represented by a unique <firstterm>issue
+   ID</firstterm>, or <firstterm>IID</firstterm>.  The issue ID is a
+   tag composed of lower case letters, digits, and underscores.</para>
+
+   <para>When you create a new issue, you may choose any issue ID you
+   wish, unless another issue already exists with the same issue ID in
+   the issue database, or unless the issue database has been
+   configured to assign issue IDs automatically.  Try to choose an
+   issue ID that is short, and that is reminiscent of the just of the
+   issue.</para>
+
+  </section> <!-- sec-issue-ids -->
+
   <section id="sec-issue-classes">
    <title>Issue Classes</title>
 
