@@ -40,6 +40,10 @@
 <!ENTITY url "<acronym>URL</acronym>">
 <!ENTITY xml "<acronym>XML</acronym>">
 
+<!-- Commands.  -->
+<!ENTITY qmtest-cmd "<command>qmtest</command>">
+<!ENTITY qmtrack-cmd "<command>qmtrack</command>">
+
 <!-- Other commonly-used symbols and phrases.  -->
 
 <!ENTITY prompt "<prompt>$ </prompt>">
